# containerized-data-importer

./: BUILD.bazel  WORKSPACE  go.mod  go.sum
api/openapi-spec/: swagger.json
cmd/cdi-importer/: BUILD.bazel  importer.go
cmd/cdi-uploadserver/: BUILD.bazel
pkg/apis/core/v1alpha1/: openapi_generated.go  types.go  types_swagger_generated.go
pkg/apis/core/v1beta1/: openapi_generated.go  types.go  types_swagger_generated.go
pkg/apiserver/webhooks/: datavolume-validate.go
pkg/common/: common.go
pkg/controller/: BUILD.bazel  clone-controller.go  clone-controller_test.go  datavolume-controller.go  import-controller.go  import-controller_test.go
pkg/image/: qemu.go
pkg/importer/: BUILD.bazel  data-processor.go  data-processor_test.go  imageio-datasource.go  imageio-datasource_test.go  vddk-datasource.go  vddk-datasource_test.go
pkg/uploadproxy/: BUILD.bazel  uploadproxy.go
pkg/uploadserver/: uploadserver.go
tests/: BUILD.bazel  api_validation_test.go  datavolume_test.go
tools/vddk-test/: BUILD.bazel  plugin.go
